fixed config to a more standard SF Object

--- a/config.json
+++ b/config.json
@@ -1,8 +1,15 @@
 {
   "objects": {
-    "Account": {
+    "Lead": {
       "fields": [
-        "Name"
+        "Salutation",
+        "FirstName",
+        "LastName",
+        "Email",
+        "HasOptedOutOfEmail",
+        "Phone",
+        "LeadSource",
+        "CreatedDate"
       ]
     }
   },
